--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECTION_STRING=postgres://postgres:41220@localhost:5432/test
+CONNECTION_STRING=postgres://ijrcdtxr:99KqlvskdCpvP70Fz0l9-YRxZRwAA2IG@arjuna.db.elephantsql.com/ijrcdtxr
 
 
